WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55454
FEDisplacementMapElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55454
Summary
FEDisplacementMapElement changes doesn't require relayout.
Renata Hodovan
Reported
2011-03-01 03:39:36 PST
FEDisplacementMapElement changes doesn't require relayout.
Attachments
Proposed patch
(5.99 KB, patch)
2011-03-01 03:42 PST
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2011-03-01 03:42:37 PST
Created
attachment 84207
[details]
Proposed patch
Andreas Kling
Comment 2
2011-03-01 07:25:07 PST
Comment on
attachment 84207
[details]
Proposed patch LGTM.
Renata Hodovan
Comment 3
2011-03-01 12:15:30 PST
Comment on
attachment 84207
[details]
Proposed patch Clearing flags on attachment: 84207 Committed
r80022
: <
http://trac.webkit.org/changeset/80022
>
Renata Hodovan
Comment 4
2011-03-01 12:15:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug