2011-03-01  Renata Hodovan  <reni@webkit.org>

Reviewed by Andreas Kling.

        FEDisplacementMapElement changes doesn't require relayout
        https://bugs.webkit.org/show_bug.cgi?id=55454

        When the FEDisplacementMapElement receives an update message but the given value remains the same we don't need
        to relayout the filter.

        No new tests are needed because this modification is covered by the dynamic update tests of FEDisplacementMap.

        * platform/graphics/filters/FEDisplacementMap.cpp:
        (WebCore::FEDisplacementMap::setXChannelSelector):
        (WebCore::FEDisplacementMap::setYChannelSelector):
        (WebCore::FEDisplacementMap::setScale):
        * platform/graphics/filters/FEDisplacementMap.h:
        * svg/SVGFEDisplacementMapElement.cpp:
        (WebCore::SVGFEDisplacementMapElement::setFilterEffectAttribute):
        (WebCore::SVGFEDisplacementMapElement::svgAttributeChanged):
        * svg/SVGFEDisplacementMapElement.h:


Canonical link: https://commits.webkit.org/69919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80022 268f45cc-cd09-0410-ab3c-d52691b4dbfc